fixed background color on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
+  background-color: #252525;
 }
 
 body {
